--- a/style.css
+++ b/style.css
@@ -5,8 +5,6 @@
     font-style: normal;
 }
 
-
-
 @font-face {
     font-family: Montserrat ExtraBold;
     font-display: auto;
@@ -33,4 +31,91 @@
     font-display: auto;
     src: local('Montserrat Regular'), url(./assetss/fonts/Montserrat-Regular.woff2);
     font-style: normal;
+}
+
+body {
+    margin: 0;
+    font-family: 'Montserrat Medium';
+}
+
+.primary-button {
+    background: #4985FF;
+    box-shadow: 0px 0px 10px rgba(111, 111, 111, 0.25);
+border-radius: 30px;
+padding: 14px 36px;
+border: 0;
+font-size: 16px;
+color: white;
+font-family: Montserrat Medium;
+}
+
+.container {
+    width: 75%;
+    margin: 0 auto;
+}
+
+h1 {
+    font-size: 48px;
+line-height: 64px;
+color: white;
+text-align: center;
+
+
+}
+
+h3 {
+    font-size: 16px;
+line-height: 20px;
+color: white;
+text-align: center;
+font-family: Montserrat Regular;
+margin: 0;
+
+}
+
+.home-section {
+    background-image: url(./assetss/img/Rectangle\ \(2\).jpg);
+    height: 100vh;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: auto 100%;
+}
+
+.home-section-content {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.home-section-content h1 {
+    margin: 30px 0 50px;
+}
+
+.navbar {
+    position: absolute;
+    left: 0;
+    right: 0;
+    height: 100px;
+}
+
+.navbar .container {
+    font-size: 16px;
+    line-height: 20px;
+    height: 100%;
+    color: white;
+    font-family: Montserrat Regular;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    
+}
+
+.navbar .container a {
+    margin: 40px 40px;
+}
+
+.navbar .container .d-element {
+border-bottom: 2px white;
 }
