--- a/style.css
+++ b/style.css
@@ -59,8 +59,6 @@ h1 {
 line-height: 64px;
 color: white;
 text-align: center;
-
-
 }
 
 h3 {
@@ -93,29 +91,67 @@ margin: 0;
     margin: 30px 0 50px;
 }
 
-.navbar {
-    position: absolute;
-    left: 0;
-    right: 0;
-    height: 100px;
-}
-
 .navbar .container {
-    font-size: 16px;
-    line-height: 20px;
-    height: 100%;
-    color: white;
-    font-family: Montserrat Regular;
+    position: absolute;
     display: flex;
+    flex-direction: row;
     justify-content: flex-end;
     align-items: center;
-    
+    padding-right: 480px;
+    border-bottom: 1px solid #A1A1A1;
 }
 
-.navbar .container a {
-    margin: 40px 40px;
+.navbar .container .m-element {
+    margin: 0 20px;
+    padding: 40px 0 40px 0;
+    font-size: 16px;
+line-height: 20px;
+color: white;
+font-family: Montserrat Regular;
+height: 100%;
+border-bottom: 2px solid transparent;
 }
 
-.navbar .container .d-element {
-border-bottom: 2px white;
+.navbar .container .m-element:hover {
+    border-bottom: 2px solid white;
+}
+
+h2 {
+    font-size: 36px;
+line-height: 53px;
+font-family: Montserrat Medium;
+text-align: center;
+margin-top: 110px;
+font-weight: bold;
+}
+
+p {
+    font-size: 16px;
+line-height: 25px;
+text-align: center;
+color: #999999;
+margin-top: 50px;
+font-family: Montserrat Regular;
+}
+
+.offers .container div {
+    display: flex;
+} 
+
+.offers .container .offer-point {
+    display: flex;
+}
+
+.offers .container .offer-point .o-cont .m-point {
+    font-size: 18px;
+line-height: 22px;
+font-family: Montserrat Regular;
+
+}
+
+.offers .container .offer-point .o-cont .o-expl{
+    font-size: 14px;
+line-height: 22px;
+color: #999999;
+font-family: Montserrat Regular;
 }
