--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ margin-top: 110px;
 font-weight: bold;
 }
 
-p {
+.offers.container p {
     font-size: 16px;
 line-height: 25px;
 text-align: center;
@@ -154,4 +154,73 @@ font-family: Montserrat Regular;
 line-height: 22px;
 color: #999999;
 font-family: Montserrat Regular;
+}
+
+.our-works {
+    background: linear-gradient(#504DC2
+    50%, white 50%);
+    padding: 100px 0 85px;
+}
+
+.our-works-title {
+    display: flex;
+    justify-content: space-between;
+}
+
+.our-works-title h4,
+.our-works-title .our-works-title-button {
+    flex: 1;
+}
+
+.our-works-title .our-works-title-button {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+}
+
+h4 {
+    color: white;
+    font-size: 36px;
+line-height: 53px;
+font-family: Montserrat Bold;
+margin: 0;
+}
+
+.our-works-content {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 70px;
+    padding-bottom: 85px;
+    border-bottom: 1px solid #E0E0E0;
+}
+
+.our-works-item img {
+    width: 100$;
+}
+
+.our-works-item {
+    width: 31%;
+}
+
+h5 {
+    font-weight: 600;
+font-size: 18px;
+font-family: Montserrat Bold;
+}
+
+.our-works-item h5 span {
+    color: #4985FF;
+}
+
+.our-works-item p {
+    font-size: 16px;
+line-height: 25px;
+color: #999999;
+}
+
+.our-works-item a {
+    font-size: 16px;
+line-height: 20px;
+text-decoration-line: underline;
+color: #4985FF;
 }
